A.F....... [ZBX-1357] updated Chinese (China), Chinese (Taiwan), English (United States), French, Japanese, Korean, Polish, Russian, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)
A......... [ZBX-9859] improved performance of screen.get method for an unprivileged user (Sasha)

Bug fixes:
A.F....... [ZBX-10316] fixed the regular expression preventing from adding web scenario steps (Ivo)
.......PS. [ZBX-10257] changed VMware items to become not supported if no VMware collector processes are started (viktors)
A......... [ZBX-10262] fixed item.update modifying "delta" field for a templated item (Ivo)
...G...... [ZBX-10372] fixed searching of network interface statistics in Solaris kstat (Andris, wiper)
A.F....... [ZBX-4842,ZBX-10532] improved auditing of maintenance API operations (Gunars)
..F....... [ZBX-10387] fixed overview vertical column rotation for IE in Japanese language (Ivo)
A......... [ZBX-10369] fixed unexpected deleting of screen items in screen.update API method (Gunars)
........S. [ZBX-10342] fixed item value not being cached by value cache if its timestamp seconds matches the oldest cached value timestamp, but the nanoseconds value is less (wiper)
.......PS. [ZBX-4894] fixed fping 3.x source IP option detection (asaveljevs)
.......PS. [ZBX-10320] fixed NFS based VMware datastore statistics (wiper)
..F....... [ZBX-10356] fixed user media form "send to" and "period" fields having incorrect "maxlength" property (Ivo)
.......PS. [ZBX-10221] fixed MySQL transaction handling when execute query fails (dimir)
.......PS. [ZBX-10366] fixed parsing of VMware responses containing too deep XML data (wiper)
..F....... [ZBX-9991] fixed functionality that adds last selected host group to new host groups list (Cemeris)
..F....... [ZBX-10319] fixed graphs consuming 100% CPU when given incorrect "stime" parameter in URL (Ivo)
A......... [ZBX-10358] fixed error message in template screen cloning (Oleg)